# rp2040_tiny_i2c_serial_rs

./: .gitignore  Cargo.toml  connect.sh
.cargo/: config.toml
src/: main.rs
