[package]
name = "rp2040_tiny_i2c_serial_rs"
version = "0.1.0"
edition = "2021"


[[bin]]
name = "rp2040_tiny_i2c_serial_rs"
doctest = false

[dependencies]
embedded-hal = "0.2.7"  # 0.2.7 is the latest version that works with rp2040-hal 0.9.2
embedded-graphics = "0.8.1"
rp-pico = "0.8.0"
usb-device = "0.2.9"  # 0.2.9 is the latest version that works with rp2040-hal 0.9.2
rp2040-hal = "0.9.2"  # 0.9.2 is the latest version that works with rp-pico 0.8.0
panic-halt = "0.2.0"
cortex-m-rt = "0.7.3"
ssd1306 = "0.8.4"
fugit = "0.3.7"
# usbd-serial = "0.2.1"
